--- a/resources/frontend/cart/package.json
+++ b/resources/frontend/cart/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "postcss": "^8.4.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.16",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
