--- a/resources/frontend/cart/package.json
+++ b/resources/frontend/cart/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "graphql:codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
@@ -18,6 +19,11 @@
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.7",
+    "@graphql-codegen/typescript-operations": "2.3.4",
+    "@graphql-codegen/typescript-react-query": "^3.5.7",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
