--- a/resources/typescript/packages/cart/package.json
+++ b/resources/typescript/packages/cart/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.34.16"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
