use berry and add typescript
https://semaphoreci.com/blog/typescript-monorepos-with-yarn

flipped comment on last gitignore line

--- a/resources/typescript/package.json
+++ b/resources/typescript/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-      "storefront",
-      "packages/*"
-  ]
+    "storefront",
+    "packages/*"
+  ],
+  "packageManager": "yarn@3.2.0",
+  "devDependencies": {
+    "typescript": "^4.6.2"
+  }
 }
