yarn workspace @paltasolutions/graphql-types graphql-codegen

--- a/resources/storefront/packages/graphql-types/codegen.yml
+++ b/resources/storefront/packages/graphql-types/codegen.yml
@@ -6,6 +6,9 @@ generates:
     plugins:
       - "typescript"
       - "typescript-operations"
+      - "typescript-react-query"
+    config:
+      fetcher: "graphql-request"
   ./graphql.schema.json:
     plugins:
       - "introspection"
