--- a/resources/typescript/storefront/package.json
+++ b/resources/typescript/storefront/package.json
@@ -1,10 +1,27 @@
 {
   "name": "@paltasolutions/storefront",
-  "version": "1.0.0",
-  "description": "Storefront app",
-  "main": "index.js",
+  "private": true,
   "repository": "https://github.com/paltasolutions/storefront",
-  "author": "Paltasolutions",
-  "license": "MIT",
-  "private": true
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@paltasolutions/cart": "workspace:^",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-query": "^3.34.16"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@vitejs/plugin-react": "^1.0.7",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.5.4",
+    "vite": "^2.8.0"
+  }
 }
