--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/laravel",
+    "name": "paltasolutions/ecom",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
@@ -21,14 +21,15 @@
         "pestphp/pest-plugin-faker": "^1.0",
         "pestphp/pest-plugin-laravel": "^1.2",
         "phpunit/phpunit": "^9.5.10",
+        "qossmic/deptrac-shim": "^0.19.3",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "PaltaSolutions\\": "src/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "PaltaSolutions\\": "src/"
         }
     },
     "autoload-dev": {
