--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ yarn-error.log
 /.vscode
 .DS_Store
 .deptrac.cache
+_lighthouse_ide_helper.php
+programmatic-types.graphql
+schema-directives.graphql
